--- a/welcome.html
+++ b/welcome.html
@@ -23,7 +23,7 @@
                     <div class="collapse navbar-collapse pt-2 pt-md-0" id="main">
                         <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                             <li class="nav-item btn btn-outline-warning ">
-                                <a class="nav-link text-white-50 text-decoration-none p-1" id="logOut" aria-current="page" href="">Logout</a>
+                                <a class="nav-link text-white-50 text-decoration-none p-1" id="logOut" aria-current="page" href="index.html">Logout</a>
                             </li>
                         </ul>
                     </div>
