--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <title>Smart Login System</title>
         <meta charset="UTF-8">
@@ -7,10 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name = "description" content="Smart Login System">
         <meta name = "kaywords" content="Smart Login System">
+        <meta anme="author" content="AHMED RASHED" />
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
+    
     <body>
 
         <section>
