--- a/home.html
+++ b/home.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
         <title>Smart Login System</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name = "description" content="Smart Login System">
         <meta name = "kaywords" content="Smart Login System">
+        <meta anme="author" content="AHMED RASHED" />
         <link rel="stylesheet" href="css/all.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
+
     <body>
 
         <section>
