--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div id="alertName" class="alert alert-danger p-1 text-center d-none mx-auto my-2 ">Your Name Should be consisting of a statement consists of a capital letter and 2-15 small letters and...</div>
 
                     <input id="email" type="email" class="form-control my-3 m-auto bg-transparent text-white sign-up" placeholder="Enter your email">
-                    <div id="alertEmail" class="alert alert-danger p-1 text-center d-none mx-auto my-2">Your Email Should be consisting of 3-10 characters and end with (@gmail.com)...</div>
+                    <div id="alertEmail" class="alert alert-danger p-1 text-center d-none mx-auto my-2">Should be consisting of 3-10 characters and end with (@"Domain name".com)...</div>
 
                     <input id="pass" type="password" class="form-control my-3 m-auto bg-transparent text-white sign-up" placeholder="Enter your password">
                     <div id="alertPass" class="alert alert-danger p-1 text-center d-none mx-auto my-2">Your Password Should be consisting of 4-15 characters either letters or numbers...</div>
